--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "emulate": "node scripts/build.js && cordova emulate android"
   },
   "eslintConfig": {
     "extends": [
@@ -154,12 +155,18 @@
       "react-app"
     ]
   },
-  "devDependencies": {
-    "cordova-android": "^9.1.0"
-  },
   "cordova": {
     "platforms": [
       "android"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
+    }
+  },
+  "devDependencies": {
+    "cordova-android": "^9.1.0",
+    "cordova-plugin-camera": "^5.0.2"
   }
 }
