--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -142,6 +142,7 @@ ext {
 }
 
 // PLUGIN GRADLE EXTENSIONS START
+apply from: "../cordova-plugin-background-fetch/timp-build.gradle"
 // PLUGIN GRADLE EXTENSIONS END
 
 def hasBuildExtras1 = file('build-extras.gradle').exists()
