--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -11,4 +11,5 @@
 target=android-29
 android.library.reference.1=CordovaLib
 android.library.reference.2=app
+cordova.gradle.include.1=cordova-plugin-background-fetch/timp-build.gradle
 cordova.system.library.1=com.android.support:support-v4:27.+
